# majgg-api

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_majgg-api.yml
ms/: liqi_new.json  protocol.proto
