[project]
name = "majgg-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=0.8.0",
    "aiohttp>=3.9.0",
    "async-timeout>=4.0.0",
    "attrs==20.3.0",
    "blinker==1.4",
    "chardet==3.0.4",
    "click==7.1.2",
    "colorama==0.3.3",
    "fastapi>=0.100.0",
    "h11==0.12.0",
    "h2==4.0.0",
    "hpack==4.0.0",
    "httptools>=0.3.0",
    "hypercorn==0.11.2",
    "hyperframe==6.0.0",
    "idna==3.1",
    "itsdangerous==1.1.0",
    "jinja2>=3.0.0",
    "markupsafe>=2.1.0",
    "multidict>=6.0.0",
    "priority==1.3.0",
    "protobuf==4.25.1",
    "pydantic>=1.10.0",
    "python-dotenv>=1.2.1",
    "quart==0.14.1",
    "six==1.15.0",
    "starlette>=0.27.0",
    "termcolor==1.1.0",
    "toml==0.10.2",
    "tqdm==4.31.1",
    "uvicorn>=0.20.0",
    "uvloop>=0.16.0 ; sys_platform != 'win32'",
    "websockets>=10.0",
    "werkzeug>=2.0.0",
    "wsproto==1.0.0",
    "yarl>=1.17.0",
]
